fixed all z-index

--- a/client/src/components/MenuNav/style.css
+++ b/client/src/components/MenuNav/style.css
@@ -1,3 +1,3 @@
 Nav {
-    z-index: 9;
+    z-index: 8;
 }
